images generator + fix
